--- a/4º Año/Comunicaciones y Redes/Unidad 4/1. Capa de Red.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 4/1. Capa de Red.md
@@ -63,7 +63,7 @@ El estándar aborda los tres primeros niveles del modelo OSI, que incluyen el ni
 A lo largo de los años, el estándar X.25 ha sido revisada varias veces para adaptarse a los avances tecnológicos y a las nuevas necesidades del mercado. Las revisiones se llevaron a cabo en 1977, 1980, 1984, 1988 y 1992, lo que permitió mantener su relevancia y eficacia en un entorno en constante cambio.
 ### Frame Relay
 
-Frame Relay, es un sucesor del protocolo X.25, y al igual que esta, es una tecnología de conmutación de paquete orientada a conexión diseñada para la transmisión eficiente de datos a través de redes WAN. Tanto el tamaño de los paquetes, como de las cabeceras son muy similares a X.25,  las principales características que distinguen a Frame Relay son las siguientes:
+Frame Relay, es un sucesor del protocolo X.25, y al igual que esta, es una tecnología de conmutación de paquete orientada a conexión diseñada para la transmisión eficiente de datos a través de redes WAN, con la diferencia que Frame Relay aborda únicamente los dos primeros niveles del modelo OSI. Tanto el tamaño de los paquetes, como de las cabeceras son muy similares a X.25,  las principales características que distinguen a Frame Relay son las siguientes:
 
 - Los paquetes de control se transmiten a través de una conexión lógica distinta de los datos de usuario (fuera de banda). De este modo, los nodos intermedios no necesitan mantener tablas de estado ni procesar mensajes relacionados con el control de llamadas individuales.
 - La multiplexación y conmutación de conexiones lógicas se hacen en el nivel 2, eliminándose así una capa completa de procesamiento obteniendo una mayor eficiencia.
@@ -74,7 +74,10 @@ La ventaja de la técnica de retransmisión de tramas es la potencia en el proce
 ### Asynchrounous Transfer Mode (ATM) 
 
 ATM es una tecnología de conmutación y multiplexación de alta eficiencia, diseñada para manejar datos en redes de banda ancha. Utiliza celdas de tamaño fijo de 53 bytes (48 bytes de datos y 5 bytes de encabezado), lo que facilita el procesamiento y la transmisión eficiente en la red. ATM tiene la capacidad para manejar diferentes tipos de tráfico como voz, video, imagenes y datos sobre la misma red. Cada celda lleva consigo un identificador de ruta llamado VPI (Virtual Path Identifier) que especifica el camino virtual que recorrerá la celda dentro de la red física y un VCI (Virtual Channel Identifier) el cual identifica de manera única el canal virtual perteneciente a un camino virtual específico. Un canal virtual representa una conexión individual entre dos puntos, por donde se transmiten los datos.
-ATM es un protocolo funcional con mínima capacidad de control de error y de flujo, debido en parte al tamaño reducido de sus cabeceras. Esto reduce el coste de procesamiento y el número de bits suplementarios necesarios para cada celda, posibilitándose así su funcionamiento a altas velocidades y delegando el resto de los controles más complejos a las capas superiores. A pesar de esto, en la especificación de ATM se reserva una serie de bits en la cabecera para realizar el control de flujo mínimo, brindando un mecanismo de transferencia controlada de celdas.
+ATM es un protocolo funcional con mínima capacidad de control de error y de flujo, debido en parte al tamaño reducido de sus cabeceras. Esto reduce el coste de procesamiento y el número de bits suplementarios necesarios para cada celda, posibilitándose así su funcionamiento a altas velocidades y delegando el resto de los controles más complejos a las capas superiores.
+La arquitectura de ATM involucra diversas capas diseñadas para operar con diferentes protocolos. Esta estructura multinivel propició la necesidad de implementar una capa de adaptación que facilitara la integración de protocolos no nativos de ATM, como IP o PCM. La ***Capa de Adaptación ATM (AAL)*** fue creada con este propósito. AAL 5, su versión más reciente, está diseñada para asegurar la compatibilidad con los paquetes del protocolo IP, simplificando así la convergencia de tecnologías en redes ATM. La siguiente tabla muestra los diferentes servicios soportados por las distintas versiones de AAL.
+
+![[versiones-AAL.png]]
 
 >[!note] Sobre ATM y Frame Relay
 >Frame Relay y ATM son tecnologías que se utilizan por sobre una red de conmutación de paquetes, como así también lo fue X.25 en su momento. En si mismo estas tecnologías especifican tanto la estructura de los paquetes como la manera de realizar el control de flujo y de errores al igual de especificar los distintos protocolos que se utilizan para lograr esto mismo.
