Achicando SOA con solo lo importante | Redes

--- a/4º Año/Comunicaciones y Redes/Unidad 2/4. Arquitectura Orientada a Servicios.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 2/4. Arquitectura Orientada a Servicios.md
@@ -1,4 +1,9 @@
-A lo largo de los años, las organizaciones fueron incorporando sistemas de información implementados en diferentes lenguajes de programación y plataformas de software y hardware. Las decisiones respecto a la tecnología de la información han sido generalmente no planificadas y tomadas a nivel de áreas o departamentos funcionales, resultando en infraestructuras heterogéneas y sectorizadas. Los negocios actuales exigen que los sistemas y aplicaciones se integren para brindar un adecuado soporte a los procesos de negocios de la organización. En consecuencia, se debe hacer frente a:
+>[!tldr] Conceptos Fundamentales
+>- **Servicios**: funcionalidad que se corresponde explícitamente con un paso de un proceso de negocios.
+>- **Interoperabilidad**: basada en estándares abiertos para favorecer la integración entre sistemas heterogéneos.
+>- **Bajo acoplamiento**: tendiente a minimizar las dependencias entre las partes del sistema en base a una interacción basada en interfaces públicas.
+
+A lo largo de los años, las organizaciones fueron incorporando sistemas de información implementados en diferentes lenguajes de programación y plataformas de software y hardware. Las decisiones respecto a la tecnología de la información han sido generalmente no planificadas y tomadas a nivel de áreas o departamentos, resultando en infraestructuras heterogéneas y sectorizadas. Los negocios actuales exigen que los sistemas y aplicaciones se integren para brindar un adecuado soporte a los procesos de negocios de la organización. En consecuencia, se debe hacer frente a:
 
 - Heterogeneidad de los sistemas y aplicaciones, ya que las aplicaciones son escritos en diferentes lenguajes de programación, para distintos sistemas operativos y plataformas de hardaware.
 - Infraestructuras sectorizadas y no planificadas (Islas/Silos de TI).
@@ -13,29 +18,13 @@ SOA puede dividirse en distintos modelos de arquitectura, cada uno de los cuales
 - **Modelo Arquitectónico de Aplicación**: Se refiere al sistema expuesto en el modelo de arquitectura de negocio como una combinación de servicios de granularidad más fina.
 - **Modelo Arquitectónico de Implementación**: Se refiere al sistema realizado de una cierta manera utilizando un hardware y software específicos.
 
->[!tldr] Conceptos Fundamentales
->- **Servicios**: funcionalidad que se corresponde explícitamente con un paso de un proceso de negocios.
->- **Interoperabilidad**: basada en estándares abiertos para favorecer la integración entre sistemas heterogéneos.
->- **Bajo acoplamiento**: tendiente a minimizar las dependencias entre las partes del sistema en base a una interacción basada en interfaces públicas.
-
-Una Arquitectura Orientada a Servicios básica utiliza un patrón de cliente-servidor que se comunican mediante el intercambio de mensajes que pueden ser comprendidos por ambas partes. Como un sistema de software distribuido, promueve una arquitectura corporativa basada en **roles** y **operaciones**. Dentro de esos roles encontramos:
+Una Arquitectura Orientada a Servicios básica utiliza un patrón de cliente-servidor que se comunican mediante el intercambio de mensajes que pueden ser comprendidos por ambas partes. Como sistema de software distribuido, promueve una arquitectura corporativa basada en **roles** y **operaciones**. Dentro de esos roles encontramos:
 
 - **Consumidor de Servicios**: Es una aplicación, módulo de software o servicio que requiere invocar la funcionalidad de otro servicio, por ejemplo: aplicaciones de usuarios finales, sistemas internos, entre otros.
 - **Proveedor de Servicios**: Es una entidad direccionable en la red que acepta y ejecuta requerimientos de los consumidores. Aloja una serie de servicios que pueden ser consumidos por los clientes.
 - **Registro de Servicios**: Es una entidad que actúa como un directorio que contiene descripciones de servicios y que permite que los consumidores encuentren los servicios disponibles.
 
-Los servicios comparten un contrato formal que establece cuáles son las funcionalidades que un servicio provee y como se debe invocar al mismo, separando la interfaz de la implementación técnica. Estas descripciones se deben especificar en una forma estándar que favorezca el bajo acoplamiento y la interoperabilidad. Un contrato de servicios provee una definición formal de:
-
-1. Ubicación del servicio.
-2. Cada operación que provee el servicio.
-3. Cada mensaje de entrada y salida soportado por cada operación.
-4. Las reglas y características del servicio y sus operaciones.
-
-Además, debería incluir información semántica que facilite la selección del servicio en función de las necesidades reales del consumidor.
-
->[!tldr] Definición de Servicio en el contexto del SOA
->Un servicio es un activo informático que se corresponde con una función o paso de un proceso de negocio y que puede ser invocado de acuerdo a ciertas políticas de servicios que se han definido para el mismo.
-
+Los servicios comparten un contrato formal que establece cuáles son las funcionalidades que un servicio provee y como se debe invocar al mismo, separando la interfaz de la implementación técnica. Además, debería incluir información semántica que facilite la selección del servicio en función de las necesidades reales del consumidor.
 Los servicios exponen su interfaz a otros servicios que los requieren y ocultan a estos los detalles internos de su implementación, actuando como cajas negras. Un servicio consiste en una o más operaciones que pueden estar implementadas utilizando distintas tecnologías. En el contexto de SOA los servicios comparten las siguientes características:
 
 - Son autónomos y autocontenidos.
@@ -47,41 +36,25 @@ Los servicios exponen su interfaz a otros servicios que los requieren y ocultan 
 - Minimizan la cantidad de información de estado.
 - Soportan el descubrimiento.
 
-Una de las clasificaciones más comunes caracteriza a los servicios como:
-
-- **Servicios Básicos**: Proporcionan una funcionalidad de negocios básica que no resulta conveniente dividir en múltiples servicios. Estos servicios no mantienen estados y pueden estar centrados en los datos o en la lógica.
-- **Servicios Intermediarios o Compuestos**: Están compuestos de otros servicios, tanto básicos como compuestos. No mantienen estados. Representan un flujo de actividades que forma parte de un proceso de negocios mayor.
-- **Servicios Centrados en los Procesos**: Llevan a cabo los procesos de negocios mediante la invocación de servicios básicos e intermediarios para realizar las tareas requeridas y manipular los datos que correspondan.
-- **Servicios Empresariales Públicos**: Ofrecidos por una organización a sus socios de negocios como una interfaz para usar ciertas funcionalidades, proporcionando facilidades para implementar soluciones Business-to-Business (B2B). Suelen requerir políticas de seguridad y SLA’s.
-
+>[!tldr] Clasificación de los Servicios
+> - **Servicios Básicos**: Proporcionan una funcionalidad de negocios básica que no resulta conveniente dividir en múltiples servicios.
+> - **Servicios Intermediarios o Compuestos**: Están compuestos de otros servicios, tanto básicos como compuestos. Representan un flujo de actividades que forma parte de un proceso de negocios mayor.
+> - **Servicios Centrados en los Procesos**: Llevan a cabo los procesos de negocios mediante la invocación de servicios básicos e intermediarios para realizar las tareas requeridas y manipular los datos que correspondan.
+> - **Servicios Empresariales Públicos**: Ofrecidos por una organización a sus socios de negocios como una interfaz para usar ciertas funcionalidades, proporcionando facilidades para implementar soluciones Business-to-Business. Suelen requerir políticas de seguridad y SLA’s.
 ### Infraestructura de la Arquitectura Orientada a Servicios
 
-Una Arquitectura Orientada a Servicios requiere de una infraestructura, un conjunto de tecnologías, que permita que las aplicaciones expongan funcionalidades como servicios y que éstos puedan ser accedidos por otras aplicaciones o servicios. Estas tecnologías incluyen protocolos, estándares y productos que faciliten la comunicación entre las distintas partes que componen el sistema; así como también diversos servicios de infraestructura (seguridad, transformación de datos, administración, etc.) que se encuentran disponibles para los proveedores y/o consumidores de servicios.
+Una Arquitectura Orientada a Servicios requiere de una infraestructura, es decir, un conjunto de tecnologías, que permita que las aplicaciones expongan funcionalidades como servicios y que éstos puedan ser accedidos por otras aplicaciones o servicios. Estas tecnologías incluyen protocolos, estándares y productos que faciliten la comunicación entre las distintas partes que componen el sistema; así como también diversos servicios de infraestructura que se encuentran disponibles para los proveedores y/o consumidores de servicios.
 Las tecnologías de comunicación y los servicios de infraestructura suelen dividirse en capas o niveles. Como lo muestra la siguiente imagen
 
 ![[capas-SOA.png]]
-
-Niveles funcionales:
-- **Transporte**: Mecanismos para la transferencia de mensajes entre consumidores y proveedores de servicios.
-- **Comunicación**: Mecanismos estándar para la comunicación de mensajes utilizando los protocolos de transporte subyacentes.
-- **Descripción**: Esquema acordado para la descripción formal de servicios.
-- **Registro**: Repositorio de descripciones de servicios que facilita las operaciones de publicación y búsqueda.
-- **Procesos de Negocios**: Composición de múltiples servicios para representar procesos de negocios que produzcan resultados de valor.
-
-Niveles de calidad de servicio:
-- **Políticas**: Reglas que especifican las condiciones bajo las cuales un proveedor expone sus servicios.
-- **Confiabilidad**: Mecanismos para la entrega de mensajes confiable (garantía de entrega, entrega ordenada, etc)
-- **Seguridad**: Mecanismos para la transmisión segura de mensajes y para la identificación, autenticación y control de acceso de los consumidores de servicios, entre otros.
-- **Transacciones**: Procedimientos aplicados para garantizar resultados consistentes en la invocación de múltiples servicios.
-- **Administración**: Conjunto de atributos que pueden ser aplicados para administrar los servicios que se proveen y consumen.
 
 >[!tldr] Bus de Servicios Empresariales
 >Uno de los elementos claves de la infraestructura de SOA es el denominado Enterprise Service Bus (ESB) o Bus de Servicios Empresariales, cuyo objetivo es simplificar la integración entre los diferentes proveedores y consumidores de servicios brindando un mecanismo estándar de comunicación.
 >Esta infraestructura de comunicaciones provee servicios básicos para la publicación y localización de servicios, encaminamiento de mensajes entre clientes y proveedores, soporte para múltiples protocolos de mensajes o mecanismos de interacción, adaptadores para la integración de funcionalidades de sistemas legados, etc.
 
-### Servicios Web
+#### Servicios Web
 
-Un servicio web es una aplicación de software que utiliza XML y que interactúa en una forma estándar con otras aplicaciones a través de una red. Son funcionalidades expuestas por una organización o programa de software, y que pueden ser descubiertos y accedidos por otros programas u organizaciones que requieren de dichos servicios. Un servicio web representa una funcionalidad de negocios discreta que puede ser de valor para muchas organizaciones.
+Un servicio web es una aplicación de software que utiliza XML o JSON y que interactúa en una forma estándar con otras aplicaciones a través de una red. Son funcionalidades expuestas por una organización o programa de software, y que pueden ser descubiertos y accedidos por otros programas u organizaciones que requieren de dichos servicios. Un servicio web representa una funcionalidad de negocios discreta que puede ser de valor para muchas organizaciones.
 Los servicios web proporcionan un modelo de computación distribuida para la integración de aplicaciones extremadamente heterogéneas sobre una red. Las especificaciones de servicios web son completamente independientes de los lenguajes de programación, sistemas operativos y plataformas de hardware. Algunas características fundamentales de los servicios web incluyen:
 
 - Son autocontenidos.
